Fixed alignment of articles in Articles

--- a/public_website/static/css/style.css
+++ b/public_website/static/css/style.css
@@ -3548,8 +3548,18 @@ figure.image figcaption {
     border-top: 4px solid #87B24D;
 }
 
+.articles-container .article-item.empty {
+    border: none;
+}
+
 .articles-container .article-item:not(:last-child) {
-    margin-bottom: 1.5rem;
+    margin-bottom: 5rem;
+}
+
+@media (max-width: 768px) {
+    .articles-container .article-item:not(:last-child) {
+        margin-bottom: 2.5rem;
+    }
 }
 
 .articles-container .article-item img.article-cover {
